--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8" />
 
+<head>
+  <title>Ruffle Dynamic Player</title>
+  <script src="https://raw.githubusercontent.com/parknich/parknich.github.io/main/libs/ruffle/ruffle.js"></script>
+  <input type="file" multiple />
+  <br />
+  <select></select>
+  <br />
+  <textarea></textarea>
+  <script src="index.js"></script>
+  <button onclick="fillgame2()" id="submit"></button>
+
+  <style>
+    * {
+      margin: 0;
+    }
+
+    :root,
+    body,
+    object {
+      width: 100%;
+      height: 90%;
+      overflow: hidden;
+    }
+  </style>
+</head>
+
+<body></body>
+
+</html>
