--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <br />
   <textarea></textarea>
   <script src="index.js"></script>
-  <button id="submit"></button>
+  <button id="submit">submit</button>
 
   <style>
     * {
