--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
   <textarea></textarea>
   <script src="index.js"></script>
   <button id="submit">submit</button>
-
+  <div id="container">Ruffle not loaded.</div>
   <style>
     * {
       margin: 0;
     }
 
-    :root,
-    body,
-    object {
+    .container {
       width: 100%;
       height: 90%;
       overflow: hidden;
