change the way the files are added to dropdown box because im retarded

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <script src="index.js"></script>
   <button id="submit">submit</button>
   <div id="container">Ruffle not loaded.</div>
+  
+  <textarea id="status" name="status" rows="2" cols="20">
+  Loading...
+  </textarea>
   <style>
     * {
       margin: 0;
