try and fix it again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
   <title>Ruffle Dynamic Player</title>
   <script src="https://raw.githubusercontent.com/parknich/parknich.github.io/main/libs/ruffle/ruffle.js"></script>
-  <input type="file" multiple />
   <br />
   <select></select>
   <br />
@@ -14,8 +13,7 @@
   <button id="submit">submit</button>
   <div id="container">Ruffle not loaded.</div>
   
-  <textarea id="status" name="status" rows="2" cols="20">
-  Loading...
+  <textarea id="status" name="status" rows="2" cols="20" disabled>
   </textarea>
   <style>
     * {
