--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8" />
-
+<html>
 <head>
+  <html lang="en">
+  <meta charset="UTF-8" />
   <title>Ruffle Dynamic Player</title>
-  <script src="https://raw.githubusercontent.com/parknich/parknich.github.io/main/libs/ruffle/ruffle.js"></script>
+  <script src="https://raw.githubusercontent.com/parknich/parknich.github.io/main/libs/ruffle/ruffle.js" defer></script>
+  <script src="index.js" defer></script>
+</head>
+
+<body>
   <br />
   <select></select>
   <br />
   <textarea></textarea>
-  
   <button id="submit">submit</button>
   <div id="container">Ruffle not loaded.</div>
-  <script src="index.js"></script>
   <textarea id="status" name="status" rows="2" cols="20" disabled>
   </textarea>
   <style>
@@ -26,8 +28,5 @@
       overflow: hidden;
     }
   </style>
-</head>
-
-<body></body>
-
+</body>
 </html>
