--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <br />
   <select id="selectBox">select game. [running js]</select>
   <br />
-  <textarea></textarea>
+  <textarea id="textareaBox"></textarea>
+  <br />
   <button id="submit">submit</button>
   <br />
   <div id="container">Ruffle not loaded.</div>
-  <textarea id="status" name="status" rows="2" cols="20" disabled> </textarea>
+  <div id="status">js not running</div>
+
   <style>
     * {
       margin: 0;
