wow i am incredibly stupid i forgot to change it from input.onchange from when i yoinked code off of stackoverflow

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
   <br />
-  <select id="selectBox">select game. [running js]</select>
+  <select id="selectBox" >
+    <option value="">--Please choose an option--</option>
+  </select>
   <br />
   <textarea id="textareaBox"></textarea>
   <br />
