FOR THE LOVE OF GOD PLEASE WORK

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <button id="submit">submit</button>
   <br />
   <div id="container">Ruffle not loaded.</div>
-  <div id="status">js not running</div>
+  <textarea id="status">js not running</textarea>
 
   <style>
     * {
